<resources>
    <string name="app_name">Brickx WMS</string>

    <!--    DataWedge-->
    <string name="datawedge_intent_filter_action">nl.brickx.ACTION</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>

    <!--    Login-->
    <string name="login_authentication_textfield_hint">Log in met uw medewerkersnummer</string>
    <string name="login_header_textview">Log in bij Brickx</string>
    <string name="log_in">Log in</string>
    <string name="api_key_default">7737d6b3-21fe-4f7d-88e3-0c887365f2aa</string>
    <string name="login_error_message">Kon niet inloggen. Probeer opnieuw.</string>

    <!--    Main Menu-->
    <string name="brickx_wms">Brickx WMS</string>
    <string name="gebruiker">Gebruiker</string>
    <string name="werkzaamheden">Werkzaamheden</string>
    <string name="informatie">Informatie</string>
    <string name="onderhoud">Onderhoud</string>

    <!--    Product Info-->
    <string name="empty">-</string>
    <string name="login_screen_product_name">Name</string>
    <string name="product_info_product_location">Locatie</string>
    <string name="product_info_product_stock">Voorraad</string>
    <string name="product_info_input_hint">Vul een productnummer in</string>
    <string name="product_info_details_title">Details:</string>
    <string name="product_info_ean_text">EAN</string>
    <string name="product_info_custom_barcode_title">Eigen Barcode</string>
    <string name="product_info_upc_title">UPC</string>
    <string name="product_error_message">Kon product data niet ophalen. Probeer opnieuw.</string>

    <!--    Location Info-->
    <string name="location_info_input_hint">Vul een locatienummer in</string>
    <string name="location_info_aantal">Aantal</string>
    <string name="location_info_stock_default_amount">-</string>
    <string name="location_info_code_title">Magazijn:</string>
    <string name="location_info_name_title">Locatie:</string>
    <string name="location_info_location_name">Locatie:</string>
    <string name="location_info_product_text">Product:</string>
    <string name="location_error_message">Kon locatie data niet ophalen. Probeer opnieuw.</string>

    <!--    Combined info screen-->
    <string name="combined_productname_text">Productnaam:</string>
    <string name="combined_barcodes_text">Barcodes:</string>
    <string name="combined_ean">EAN: </string>
    <string name="combined_upc">UPC: </string>
    <string name="combined_custom_barcode">Eigen Barcode: </string>
    <string name="combined_stock_text">Voorraad:</string>
    <string name="combined_sku_text">SKU:</string>
    <string name="combined_details_text">Details:</string>
    <string name="combined_packaging_units_text">Hoeveelheid per verpakking:</string>
    <string name="combined_weight_text">Gewicht:</string>
    <string name="combined_properties_text">Eigenschappen:</string>
    <string name="combined_property_content">Eigenschap: </string>
    <string name="combined_property_value_content">Waarde: </string>
    <string name="combined_location_text">Locatie:</string>

    <!--    Order pick-->
    <string name="order_pick_open_order_title">Openstaande Orders</string>
    <string name="order_pick_landing_card_status">Status</string>
    <string name="order_pick_landing_text_input_hint">Scan een ordernummer in</string>
    <string name="order_pick_next_product_title">Volgend product info</string>
    <string name="order_pick_main_product_name_text">Productnaam:</string>
    <string name="order_pick_product_location_title">Locatie:</string>
    <string name="order_pick_main_warehouse_text">Magazijn:</string>
    <string name="order_pick_main_amount_to_pick_text">Aantal te picken:</string>
    <string name="order_pick_main_product_pick_status_item_amount_out_of_placeholder">/ 0</string>
    <string name="order_pick_main_product_pick_status_amount_input_hint">Aantal</string>
    <string name="order_pick_end_product_name_content">Product naam</string>
    <string name="order_pick_end_title">Overzicht</string>
    <string name="order_pick_end_items_left_content">0 / 0 Artikelen</string>
    <string name="order_pick_end_button_end">Orderpick Afronden</string>
    <string name="order_pick_end_button_start">Orderpick Starten</string>
    <string name="order_pick_status_free">Vrij</string>
    <string name="order_pick_status_busy">Bezig</string>
    <string name="order_pick_status_on_hold">In de wacht</string>
    <string name="order_pick_status_completed">Afgerond</string>
    <string name="order_pick_landing_error_message">Kon orders niet ophalen.</string>
    <string name="order_pick_overview_amount_picked_splitter"> / </string>
    <string name="spaceless_splitter">/</string>
    <string name="order_pick_info_title_scan_right_amount">Scan het gevraagde aantal…</string>
    <string name="order_pick_info_title_scan_location">Scan locatie in…</string>
    <string name="order_pick_info_title_done">Klaar! Door naar de volgende.</string>
    <string name="Order_pick_serial_number_hint">Serienummers:</string>
    <string name="order_pick_status_serial_number_template_text">Serienummer:</string>

    <!--    Stock transfer-->
    <string name="stock_transfer_landing_location_title">Kies een locatie:</string>
    <string name="stock_transfer_title">Voorraad transfer</string>
    <string name="stock_transfer_main_from_location_title">Van locatie:</string>
    <string name="stock_transfer_to_location_text">Naar locatie:</string>
    <string name="stock_transfer_main_button_title">Transfer voorraad</string>
    <string name="stock_transfer_main_amount_picker_text">Transfer aantal:</string>
    <string name="stock_transfer_scanned_location_text">Gescande locatie:</string>

    <!--    Stock mutation-->
    <string name="stock_mutation_amount_status_text">Mutatie aantal:</string>
    <string name="stock_mutation_product_text">Product:</string>
    <string name="stock_mutation_sku_text">SKU:</string>
    <string name="stock_mutation_title">Voorraad mutatie</string>
    <string name="stock_mutation_button_text">Muteer voorraad</string>
    <string name="stock_mutation_input_hint">Zoek hier een product</string>
    <string name="stock_mutation_reason_title">Reden voor mutatie:</string>
    <string name="stock_mutation_reason_long">Mutatie reden</string>
    <string name="stock_mutation_plusminus_title">Plus of min:</string>
    <string name="stock_mutation_min_button_text">MIN</string>
    <string name="stock_mutation_plus_button_text">PLUS</string>
    <string name="stock_transfer_main_input_tooltip">Vul een locatie in</string>
    <string name="stock_mutation_main_status_input_hint">Bijv. -5 of 5</string>


</resources>
